--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,11 @@ django-ckeditor==5.2.2
 django-multiupload==0.5.2
 olefile==0.44
 wsgiref==0.1.2
+Django==1.10.4
+Pillow==4.1.1
+argparse==1.2.1
+django-ckeditor==5.2.2
+django-multiupload==0.5.2
+gunicorn==19.7.1
+olefile==0.44
+wsgiref==0.1.2
